# med-qa-rag

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml
.opencode/: opencode.json
docs/: implementation-plan.md
docs/archive/: architecture.md
src/medical_rag/: config.py  main.py
src/medical_rag/core/: attribution.py  confidence.py  data_pipeline.py  ingestion.py  rag_engine.py  retrieval.py
